--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "SKExtension"]
-	path = SKExtension
+[submodule "skextension"]
+	path = skextension
 	url = https://github.com/SilverIceKey/SKExtension
