--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "skextension"]
-	path = skextension
+[submodule "SKExtension"]
+	path = SKExtension
 	url = https://github.com/SilverIceKey/SKExtension
