--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-kapt'
     id 'kotlin-android'
     id 'kotlin-parcelize'
 }
@@ -32,7 +33,7 @@ android {
         }
     }
     buildFeatures {
-        compose true
+        dataBinding true
     }
     packagingOptions {
         exclude 'META-INF/INDEX.LIST'
@@ -46,9 +47,6 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.0.5'
-    }
     externalNativeBuild {
         cmake {
             path file('src/main/cpp/CMakeLists.txt')
@@ -59,21 +57,18 @@ android {
 
 dependencies {
     //---------------------本地包以及Android相关依赖引用----------------
+    implementation fileTree(dir: 'libs', includes: ['*.jar'])
+    implementation fileTree(dir: 'libs', includes: ['*.aar'])
     implementation('androidx.multidex:multidex:2.0.1')
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation "androidx.compose.ui:ui:1.0.5"
-    implementation "androidx.compose.material:material:1.0.5"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.0.5"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.0.5"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.0.5"
 
     //---------------------第三方库引用----------------
     //kotlin 扩展相关
